# sui-graphql

./: .eslintrc.js  Cargo.toml  README.md  eslint.config.mjs  package-lock.json  package.json
graphql/: query.graphql  schema.json
src/: graphql.rs  main.rs
