[package]
name = "this"
version = "0.1.0"
edition = "2021"

[dependencies]
sui-sdk-types = { git = "https://github.com/MystenLabs/sui-rust-sdk", package = "sui-sdk-types", features = ["serde"], rev = "98ecfa1" }
graphql_client = "0.14.0"
reqwest = { version = "0.12.8", features = ["json"] }
serde = { version = "1.0.213", features = ["derive"] }
serde_json = "1.0.132"
tokio = { version = "1.41.0", features = ["full"] }
