[package]
name = "this"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.98"
graphql_client = "0.14.0"
reqwest = { version = "0.12.22", features = ["json"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.141"
sui-graphql-client = "0.0.6"
sui-rpc = "0.0.6"
sui-sdk-types = { version = "0.0.6", features = ["serde"] }
tokio = { version = "1.47.0", features = ["full"] }
tokio-stream = "0.1.17"
tonic = "0.13.0"
