[package]
name = "this"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
graphql_client = "0.16.0"
reqwest = { version = "0.13.4", features = ["json"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
sui-rpc = "0.3.1"
sui-sdk-types = { version = "0.3.1", features = ["serde"] }
tokio = { version = "1.52.3", features = ["full"] }
tokio-stream = "0.1.18"
tonic = "0.14.6"
